# UnitCinema

./: pyproject.toml
Cinema/: asgi.py  settings.py  urls.py  views.py  wsgi.py
evaluate/: models.py  urls.py  views.py
film/: models.py  urls.py  views.py
hall/: models.py  urls.py  views.py
notice/: models.py  urls.py  views.py
sites/: models.py  urls.py
ticket/: models.py  urls.py  views.py
user/: models.py  urls.py  views.py
worker/: admin.py  models.py  urls.py  views.py
