[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["zhuxiangyualter <1570801561@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
